update icon info

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,4 +109,10 @@ flutter:
     - assets/images/hitam-04.png 
     - assets/images/hitam-05.png 
     - assets/images/hitam-06.png 
+    - assets/images/manager.png 
+    - assets/images/atraction.png 
+    - assets/images/facilities.png 
+    - assets/images/transportation.png 
+    - assets/images/info2.png 
+    - assets/images/meeteng.png 
  
