--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   intl: ^0.17.0
   external_app_launcher: ^2.0.2
   platform_device_id: ^1.0.1
+  carousel_slider: ^4.1.1
+  device_apps: ^2.2.0 
+  video_player: ^2.4.2
+  chewie: ^1.3.2
   
 dev_dependencies:
   flutter_test:
@@ -114,4 +118,11 @@ flutter:
     - assets/images/Putih-04.png 
     - assets/images/Putih-05.png 
     - assets/images/Putih-06.png 
+
+  fonts:
+    - family: Roboto Condensed
+      fonts:
+        - asset: assets/fonts/RobotoCondensed-Regular.ttf
+        - asset: assets/fonts/RobotoCondensed-Bold.ttf
+          weight: 700
  
