--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   device_apps: ^2.2.0 
   video_player: ^2.4.2
   chewie: ^1.3.2
+  weather: ^2.0.1
+  dio: ^4.0.6
+  get_storage: ^2.0.3
+  geolocator: ^7.7.0
+  get: ^4.3.8
   
 dev_dependencies:
   flutter_test:
@@ -118,6 +123,7 @@ flutter:
     - assets/images/Putih-04.png 
     - assets/images/Putih-05.png 
     - assets/images/Putih-06.png 
+    - assets/images/logo2.png 
 
   fonts:
     - family: Roboto Condensed
